# bioinformatics

./: .gitattributes  .gitignore  Cargo.toml  README.md  architecture.drawio  easy-tunnel.sh  fastq_runid_9d742d72b6f5d334c2d0d388f2eb1da13decd9a6_0_0.fasta  found-false-result-from-constructor
.github/workflows/: rust.yml
cpp/: .gitignore  Makefile  howtotree.cpp  output.txt  unsorted.txt
cpp-plants/: Makefile  README.md
cpp-plants/g++/: .gitignore
data/: GCA_029929735.1_Mimpud_MpudA1P6v1_genomic.fna
data/Sample1RNAControl1/: fastq_runid_9d742d72b6f5d334c2d0d388f2eb1da13decd9a6_0_0.fasta  fastq_runid_9d742d72b6f5d334c2d0d388f2eb1da13decd9a6_10_0.fasta  fastq_runid_9d742d72b6f5d334c2d0d388f2eb1da13decd9a6_11_0.fasta  fastq_runid_9d742d72b6f5d334c2d0d388f2eb1da13decd9a6_12_0.fasta  fastq_runid_9d742d72b6f5d334c2d0d388f2eb1da13decd9a6_13_0.fasta  (+56 more)
docs/: DataTutorial.md
notes/: oxford-nanopore-min-ion.md
prisma/: schema.prisma  schema.prisma.wip
rusty-plants/: .gitignore  Cargo.toml  gitignore
rusty-plants/.cargo/: config.toml
rusty-plants/docs/: README-old.md
rusty-plants/notes/dev-diaries/Gavin/: week1.md  week2.md  week8.md  week9.md
rusty-plants/scripts/: cargo-test-stdout.sh
rusty-plants/src/: db_main.rs  graph.rs  lib.rs  main.rs
rusty-plants/src/algorithms/: edit_distance.rs  mod.rs  read_align.rs  string_finder.rs
rusty-plants/src/data_structures/: byte_vec.rs  loader.rs  mod.rs  suffix_tree.rs  tree.rs
rusty-plants/src/fasta/: mod.rs
rusty-plants/src/utils/: mem_usage.rs  mod.rs
rusty-plants/tools/: p_analysis_of_duplicate_walks.py
scripts/: easy-tunnel.sh
src/: lib.rs  main.rs  suffix.rs  tree.rs
tests/: tests.rs
web/: README.md  package-lock.json  package.json
(+54 files in other folders)
