[package]
name = "smarty-plants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
human-panic = "2.0.0"
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.8.0", features = [ "postgres" ] }
tokio = { version = "1.39.2", features = ["full"] }

[[bin]]
name = "db_test"
path = "src/db_main.rs"

[[bin]]
name = "read_align"
path = "src/main.rs"
